--- a/HW3-drafting-viz.qmd
+++ b/HW3-drafting-viz.qmd
@@ -51,25 +51,22 @@ wildfire <- janitor::clean_names(wildfire_original) %>%
 ```
 
 ##Which option do you plan to pursue? Restate your question(s). Has this changed at all since HW #1? If yes, how so?
-```
-ANSWER: I plan to puruse option 1, where I will have one question that each of the three visualizations works to answer, where each visualization is meant to reach / serve a different target audience and purpose. To restate, my question is: "How have wildfires changed over time?" Yes, this question has changed, since my first question in HW#1 relied on incorporating a dataset that turned out to be a bust and had very little information in it to extract anything meaningful. 
 
+```         
+ANSWER: I plan to puruse option 1, where I will have one question that each of the three visualizations works to answer, where each visualization is meant to reach / serve a different target audience and purpose. To restate, my question is: "How have wildfires changed over time?" Yes, this question has changed, since my first question in HW#1 relied on incorporating a dataset that turned out to be a bust and had very little information in it to extract anything meaningful. 
 ```
 
 ##Explain which variables from your data set(s) you will use to answer your question(s).
-```
+
+```         
 ANSWER: The variables I will use to answer my question include 'ignition date', 'burned area (acres)', and 'incident types'.
 ```
 
 ##Find at least two data visualizations that you could (potentially) borrow / adapt pieces from. Link to them or download and embed them into your .qmd file, and explain which elements you might borrow (e.g. the graphic form, legend design, layout, etc.).
 
+##Hand-draw your anticipated three visualizations (option 1) or infographic (option 2). Take a photo of your drawing and embed it in your rendered .qmd file -- note that these are not exploratory visualizations, but rather your plan for your final visualizations that you will eventually polish and submit with HW #4.
 
-
-##Hand-draw your anticipated three visualizations (option 1) or infographic (option 2). Take a photo of your drawing and embed it in your rendered .qmd file – note that these are not exploratory visualizations, but rather your plan for your final visualizations that you will eventually polish and submit with HW #4.
-
-
-
-##Mock up your visualizations using code. 
+##Mock up your visualizations using code.
 
 ```{r}
 wildfire <- unique(wildfire)
@@ -90,7 +87,6 @@ large_wildfire <- filter(wildfire, burn_bnd_ac >= 1000)
 #+ ggtitle(“Average Size of Wildfires Has
 ```
 
-
 ```{r}
 #by decade
 
@@ -109,19 +105,18 @@ wildfire_decade <- mutate(wildfire,
 
 wildfire_decade <- group_by(wildfire_decade, decade, na.rm=TRUE)
 
-ggplot(data=wildfire_decade) + 
+ggplot(data=wildfire_decade, width = 4, height = 6) + 
   geom_col(mapping = aes(x=decade, y=burn_bnd_ac), fill="darkred", width=0.8) +
   scale_y_continuous(name ="Acreages Burned", labels = scales::comma) +
-  theme_minimal()
+  xlab("Decade") +
+  ggtitle("Wildfire Acreages Burned by Decade") +
+  theme(plot.title = element_text(size = 16, face = "bold", margin = margin(b = 14)),
+        panel.background = element_rect(fill = "white")) 
+        
 ```
-
 
 ##What challenges did you encounter or anticipate encountering as you continue to build / iterate on your visualizations in R?
 
-
-##What ggplot extension tools / packages do you need to use to build your visualizations? Are there any that we haven’t covered in class that you’ll be learning how to use for your visualizations?
-
+##What ggplot extension tools / packages do you need to use to build your visualizations? Are there any that we haven't covered in class that you'll be learning how to use for your visualizations?
 
 ##What feedback do you need from the instructional team and / or your peers to ensure that your intended message is clear?
-
-
