responded to inspiration Q

--- a/HW3-drafting-viz.qmd
+++ b/HW3-drafting-viz.qmd
@@ -64,6 +64,13 @@ ANSWER: The variables I will use to answer my question include 'ignition date', 
 
 ##Find at least two data visualizations that you could (potentially) borrow / adapt pieces from. Link to them or download and embed them into your .qmd file, and explain which elements you might borrow (e.g. the graphic form, legend design, layout, etc.).
 
+```
+ANSWER: I like how Meghan annotates her plot with further context, while keeping the overall aethetic pretty clean in her hockey plot: https://meghan.rbind.io/blog/2022-02-22-increasing-the-flexibility-and-robustness-of-plots-in-ggplot2/.I may borrow how she annotates her plot in the lower right corner of the plot. 
+
+Another plot that I like is Cedric's historical mobile subscriptions plot here: https://raw.githubusercontent.com/Z3tt/TidyTuesday/main/plots/2020_46/2020_46_HistoricalPhones.png. I am thinking that perhaps this will be a good crossover for the histortical wildfire plots that I am trying to make. Specifically, I like his layout with the world proportions on the right, which I think will work nicely for the incident types, perhaps?
+
+```
+
 ##Hand-draw your anticipated three visualizations (option 1) or infographic (option 2). Take a photo of your drawing and embed it in your rendered .qmd file -- note that these are not exploratory visualizations, but rather your plan for your final visualizations that you will eventually polish and submit with HW #4.
 
 ##Mock up your visualizations using code.
@@ -72,6 +79,12 @@ ANSWER: The variables I will use to answer my question include 'ignition date', 
 wildfire <- unique(wildfire)
 
 large_wildfire <- filter(wildfire, burn_bnd_ac >= 1000)
+
+summary(large_wildfire)
+
+large_wildfire <- na.omit(large_wildfire)
+
+summary(large_wildfire)
 
 # grouped_fire <- group_by(large_wildfire, incid_type, ig_date)
 # 
@@ -120,3 +133,15 @@ ggplot(data=wildfire_decade, width = 4, height = 6) +
 ##What ggplot extension tools / packages do you need to use to build your visualizations? Are there any that we haven't covered in class that you'll be learning how to use for your visualizations?
 
 ##What feedback do you need from the instructional team and / or your peers to ensure that your intended message is clear?
+
+```{r}
+largest_wildfire <- large_wildfire %>% 
+  filter(incid_type == "Wildfire") %>% 
+  arrange(desc(burn_bnd_ac)) %>% 
+  slice(1:20)
+```
+
+```{r}
+ggplot() +
+  geom_sf(data = largest_wildfire, aes(fill = burn_bnd_ac)) 
+```
