--- a/HW3-drafting-viz.qmd
+++ b/HW3-drafting-viz.qmd
@@ -27,6 +27,8 @@ library(lubridate)
 library(scales)
 library(jsonlite)
 library(gghighlight)
+library(hrbrthemes)
+library(knitr)
 
 #..........................import data...........................
 wildfire_original <- st_read("data/mtbs_perims_DD.shp")
@@ -53,7 +55,7 @@ wildfire <- janitor::clean_names(wildfire_original) %>%
 ##Which option do you plan to pursue? Restate your question(s). Has this changed at all since HW #1? If yes, how so?
 
 ```         
-ANSWER: I plan to puruse option 1, where I will have one question that each of the three visualizations works to answer, where each visualization is meant to reach / serve a different target audience and purpose. To restate, my question is: "How have wildfires changed over time?" Yes, this question has changed, since my first question in HW#1 relied on incorporating a dataset that turned out to be a bust and had very little information in it to extract anything meaningful. 
+ANSWER: I plan to puruse option 1, where I will have one question that each of the three visualizations works to answer, where each visualization is meant to reach / serve a different target audience and purpose. To restate, my question is: "How have wildfires in the US changed over time?" Yes, this question has changed, since my first question in HW#1 relied on incorporating a dataset that turned out to be a bust and had very little information in it to extract anything meaningful. This one is more fun though because I can plot data over time and that is intuitive to me. 
 ```
 
 ##Explain which variables from your data set(s) you will use to answer your question(s).
@@ -72,6 +74,38 @@ Another plot that I like is Cedric's historical mobile subscriptions plot here: 
 
 ##Hand-draw your anticipated three visualizations (option 1) or infographic (option 2). Take a photo of your drawing and embed it in your rendered .qmd file -- note that these are not exploratory visualizations, but rather your plan for your final visualizations that you will eventually polish and submit with HW #4.
 
+```{r}
+#| eval: true
+#| echo: false
+#| fig-align: "center"
+#| out-width: "100%"
+#| fig-alt: "hand drawn brainstorm graphs"
+
+knitr::include_graphics("/Users/lianechen/Documents/5_MEDS/Winter_2024/eds240-data-viz/assignments/chen-eds240-HW4/graphics/IMG_5035.jpg")
+
+```
+```{r}
+#| eval: true
+#| echo: false
+#| fig-align: "center"
+#| out-width: "100%"
+#| fig-alt: "hand drawn brainstorm graphs"
+
+knitr::include_graphics("/Users/lianechen/Documents/5_MEDS/Winter_2024/eds240-data-viz/assignments/chen-eds240-HW4/graphics/IMG_5036.jpg")
+
+```
+
+```{r}
+#| eval: true
+#| echo: false
+#| fig-align: "center"
+#| out-width: "100%"
+#| fig-alt: "hand drawn brainstorm graphs"
+
+knitr::include_graphics("/Users/lianechen/Documents/5_MEDS/Winter_2024/eds240-data-viz/assignments/chen-eds240-HW4/graphics/IMG_5037.jpg")
+
+```
+
 ##Mock up your visualizations using code.
 
 ```{r}
@@ -86,18 +120,20 @@ summary(large_wildfire)
 
 ```
 
-###Visualization for a general audience 
+###Visualization (1) for a general audience 
 In this plot, we will include all of the data points from the large_wildfire dataset, as to trigger more reaction when they see how counts have increased exponentially in later years.
 
 ```{r}
 large_wildfire %>%
   ggplot( aes(x=ig_date)) +
     geom_histogram(binwidth = 7, fill = "darkred", color = "darkred", alpha = 0.5) +
-  labs(x = "Year", y = "Count", title = "US Wildfire Incident Counts between 1984 and 2023") +
+  labs(x = "Year", y = "Count", title = "US Wildfire Incident Counts between 1984 and 2023", caption = "Source: MTBS 2024") +
   theme_ipsum()
 ```
 
-###Visualization to be included in a report
+
+
+###Visualization (2) to be included in a report
 This plot includes more statistical information (regressionline) in a 
 streamlined presentation for a technical audience.
 
@@ -115,11 +151,12 @@ large_wildfire %>%
   scale_fill_continuous(guide = "none") +  
   labs(title = "US Wildfire Incidents between 1984 and 2023",
        x = "Year",
-       y = "Burned Area (acres)") +
+       y = "Burned Area (acres)",
+       caption = "Source: MTBS 2024") +
   theme_ipsum()
 ```
 
-###Visualization for inclusion in a presentation
+###Visualization (3) for inclusion in a presentation
 Next, we will group the date into decades, so to make the information easier to 
 digest for the audience with a shorter amount of time to process.
 
@@ -147,22 +184,28 @@ wildfire_decade <- group_by(wildfire_decade, decade, na.rm=TRUE)
 ggplot(data=wildfire_decade, width = 4, height = 4) + 
   geom_col(mapping = aes(x=decade, y=burn_bnd_ac), fill="darkred", width=0.6) +
   scale_y_continuous(name ="Acreages Burned (acres)", labels = scales::comma) +
+  labs(caption = "Source: MTBS 2024") +
   xlab("Decade") +
   annotate("text", x=Inf, y=Inf, hjust=1.3, vjust=6.5, size=2,
            label = "**Note that data\nis available only\nthrough year 2023", family = "Avenir") +
   ggtitle("Wildfire Acreages Burned by Decade (1980-2023)") +
-  theme(plot.title = element_text(size = 16, family="Times New Roman", face = "bold", margin = margin(b = 6)),
+  theme(plot.title = element_text(size = 18, family="Times New Roman", face = "bold", margin = margin(b = 6)),
         panel.background = element_rect(fill = "white"), plot.margin = unit(c(0.5, 0.5, 0.5, 0.5), "inches"))
-        
 ```
 
 
 ##What challenges did you encounter or anticipate encountering as you continue to build / iterate on your visualizations in R?
 
+```
+Some of the other plots I tried including using the spatial data to show geographical data, but that was too spread apart, and creating stacked stream graphs with the decades data, but the class types did not work. I want to continue building out annotations and labels for these current graphs, and anticipate needing to spend time on figuring out the positioning of the text. 
+```
+
 ##What ggplot extension tools / packages do you need to use to build your visualizations? Are there any that we haven't covered in class that you'll be learning how to use for your visualizations?
+```
+I used the hrbr package and found some themes that I think are now my favorites, in replacement of theme_minimal. For the next iteration, I want to work more with gghighlight and see if I can call out the top three major fires and add text.
+```
 
 ##What feedback do you need from the instructional team and / or your peers to ensure that your intended message is clear?
-
-
-
-
+```
+I'm having trouble using some of the fill= syntax when there are three variables and could use more tips on how to get the plots to actually plot when this happens. Usually it is two numeric and one categorical. 
+```
